fix: transferred container from display to visibility option.

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -780,7 +780,7 @@ h4::after {
     }
 
     .pinned-tasks-container {
-        display: none;
+        visibility: hidden;
     }
 
     .header-card {
